refactor: New structure of the code
- bsmmsg/msgobj.py added
- bsmserver.py is a normal .py file now (not .ipynb)
- new parameters added

--- a/demo/Client_pull.ipynb
+++ b/demo/Client_pull.ipynb
@@ -9,9 +9,54 @@
     "import socket\n",
     "import time\n",
     "import json\n",
-    "HOST = '192.168.0.140'   # The server's hostname or IP address\n",
+    "HOST = '127.0.0.1'   # The server's hostname or IP address\n",
     "PORT = 65432        # The port used by the server\n",
     "CLIENT = 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CHECK\n",
+    "This part tests \"mode\" = \"check\" functionality.\n",
+    "\n",
+    "Query sent in a `Check` mode returns all the BSM messages and doesn't change anything on the server.\n",
+    "It shall be used by external apps, to visualize the messages that are going to be broadcasted etc.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
+    "    s.connect((HOST, PORT))\n",
+    "    for i in range (1):\n",
+    "        data = {\n",
+    "            'mode' : 'check',\n",
+    "        }\n",
+    "        msg = json.dumps(data)\n",
+    "        msg = str.encode(msg)\n",
+    "        s.sendall(msg)\n",
+    "        data = s.recv(16184)\n",
+    "        print ('Data: {}\\n'.format(repr(data)))    \n",
+    "        #time.sleep(2)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pull\n",
+    "This part tests \"mode\" = \"pull\" functionality.\n",
+    "\n",
+    "Query sent in a `pull` mode returns a bsm message that shall be broadcasted next.\n",
+    "This query shall be used by Cohda and other broadcast devices. \n",
+    "BSM server assumes that if the message was sent as a response to `pull` request, it is automatically broadcasted. Thus, the `pull` query shouldn't be used by external apps.\n",
+    "\n"
    ]
   },
   {
@@ -32,46 +77,6 @@
     "        data = s.recv(1024)\n",
     "        print ('Data: {}\\n'.format(repr(data)))    \n",
     "        time.sleep(0.1)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# CHECK\n",
-    "This part tests \"mode\" = \"check\" functionality"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HOST = '192.168.0.140'   # The server's hostname or IP address\n",
-    "PORT = 65432        # The port used by the server\n",
-    "CLIENT = 1\n",
-    "\n",
-    "with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
-    "    s.connect((HOST, PORT))\n",
-    "    for i in range (1):\n",
-    "        data = {\n",
-    "            'mode' : 'check',\n",
-    "        }\n",
-    "        msg = json.dumps(data)\n",
-    "        msg = str.encode(msg)\n",
-    "        s.sendall(msg)\n",
-    "        data = s.recv(16184)\n",
-    "        print ('Data: {}\\n'.format(repr(data)))    \n",
-    "        #time.sleep(2)\n",
     "    "
    ]
   },
