--- a/demo/client_push.ipynb
+++ b/demo/client_push.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Push\n",
+    "This notebook simulates the Object Detection and Tracking component. It sends messages about two objects - the first one moves in a square, whereas the second one moves in a circle."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -14,11 +22,7 @@
     "import sys\n",
     "\n",
     "from time import time, sleep\n",
-    "from random import randint, random\n",
-    "\n",
-    "HOST = '192.168.0.140'   # The server's hostname or IP address\n",
-    "PORT = 65432        # The port used by the server\n",
-    "DATA_BUFF = 4096"
+    "from random import randint, random\n"
    ]
   },
   {
@@ -27,28 +31,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SHUTDOWN_AFTER = 500\n",
+    "# Connection parameters\n",
+    "HOST = '127.0.0.1'   # The server's hostname or IP address\n",
+    "PORT = 65432         # The port used by the server\n",
+    "DATA_BUFF = 4096\n",
+    "SHUTDOWN_AFTER = 5000 # How many steps shall be broadcasted\n",
     "\n",
-    "# For rectangle\n",
+    "\n",
+    "# Object parameters\n",
+    "\n",
+    "# Object types:\n",
+    "#    0 - Unknown\n",
+    "#    1 - Person\n",
+    "#    2 - Bicycle\n",
+    "#    3 - Car\n",
+    "#    4 - Motorcycle\n",
+    "#    5 - Bus\n",
+    "#    6 - Truck\n",
+    "RECT_OBJ_TYPE = 3\n",
+    "CIRCLE_OBJ_TYPE = 1 \n",
+    "\n",
+    "\n",
+    "# Coordinates for an object moving in a rectangle\n",
     "LAT_MIN = 38.979056\n",
     "LAT_MAX = 38.979965\n",
     "\n",
     "LON_MIN = -76.925973\n",
     "LON_MAX = -76.924568\n",
     "\n",
-    "# for circle\n",
+    "# Coordinates for an object moving in a circle\n",
     "LAT_CENTER = 38.98\n",
     "LON_CENTER = -76.925\n",
     "RADIUS = 0.0003\n",
     "\n",
     "\n",
+    "SPEED = 5.0 # Speed of objects (m/s)\n",
+    "ELEV = 25.0 # Elevation of the intersection (m.a.s.l)\n",
     "\n",
-    "SPEED = 5.0\n",
-    "ELEV = 25.0\n",
-    "\n",
-    "NR_STEPS = 20\n",
-    "allsteps = 1\n",
-    "\n",
+    "NR_STEPS = 20 # How many steps (messages) to drive around the entire rectangle or circle\n",
+    "allsteps = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def geo2Angle(lat1, lon1, lat2, lon2):\n",
     "    dLon = (lon2 - lon1)\n",
@@ -132,19 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = circle()\n",
-    "for i in range(20):\n",
-    "    rec = next(r)\n",
-    "    print (rec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sendLatLon(s, lat, lon, obj_id, prevPoint = None):\n",
+    "def sendLatLon(s, lat, lon, obj_id, objType = 0, prevPoint = None):\n",
     "    if prevPoint is None:\n",
     "        heading = 0\n",
     "    else:\n",
@@ -153,6 +170,7 @@
     "\n",
     "    data = {\n",
     "        'id' : obj_id,\n",
+    "        'objectType' : objType,\n",
     "        'secMark' : time(),\n",
     "        'lat' : lat,\n",
     "        'lon' : lon,\n",
@@ -181,12 +199,12 @@
     "\n",
     "        if random() < 0.9:\n",
     "            lat, lon = next(my_rectangle)\n",
-    "            data = sendLatLon(s, lat, lon, 1, prevPointRect)\n",
+    "            data = sendLatLon(s, lat, lon, 1, objType = RECT_OBJ_TYPE, prevPoint = prevPointRect)\n",
     "            prevPointRect = (lat, lon)\n",
     "\n",
     "        if random() < 0.9:\n",
     "            lat, lon = next(my_circle)\n",
-    "            data = sendLatLon(s, lat, lon, 2, prevPointCircle)\n",
+    "            data = sendLatLon(s, lat, lon, 2, objType = CIRCLE_OBJ_TYPE, prevPoint = prevPointCircle)\n",
     "            \n",
     "        counter += 1\n",
     "        if counter > SHUTDOWN_AFTER:\n",
@@ -204,52 +222,6 @@
    "source": [
     "s.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "round(3.12354, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = {'a': 1, 'b' : None, 'c' : 3}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = {'a': 1, 'b' : None, 'c' : 3}\n",
-    "print (d)\n",
-    "d = {i:d[i] for i in d if d[i] is not None}\n",
-    "d        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
