--- a/demo/Client_pull.ipynb
+++ b/demo/Client_pull.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "source": [
     "# CHECK\n",
-    "This part tests \"mode\" = \"check\" functionality.\n",
+    "This part tests `\"mode\" = \"check\"` functionality.\n",
     "\n",
-    "Query sent in a `Check` mode returns all the BSM messages and doesn't change anything on the server.\n",
+    "Query sent in a `check` mode returns all the BSM messages and doesn't change anything on the server.\n",
     "It shall be used by external apps, to visualize the messages that are going to be broadcasted etc.\n"
    ]
   },
@@ -33,16 +33,15 @@
    "source": [
     "with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
     "    s.connect((HOST, PORT))\n",
-    "    for i in range (1):\n",
-    "        data = {\n",
-    "            'mode' : 'check',\n",
-    "        }\n",
-    "        msg = json.dumps(data)\n",
-    "        msg = str.encode(msg)\n",
-    "        s.sendall(msg)\n",
-    "        data = s.recv(16184)\n",
-    "        print ('Data: {}\\n'.format(repr(data)))    \n",
-    "        #time.sleep(2)\n",
+    "    \n",
+    "    data = {\n",
+    "        'mode' : 'check',\n",
+    "    }\n",
+    "    msg = json.dumps(data)\n",
+    "    msg = str.encode(msg)\n",
+    "    s.sendall(msg)\n",
+    "    data = s.recv(16184)\n",
+    "    print ('Data: {}\\n'.format(repr(data)))    \n",
     "    "
    ]
   },
@@ -50,8 +49,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`check` accepts also `last_updated` parameter. If this parameter is set to `N` only the BSM messages that were updated in the last `N` seconds are returned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
+    "    s.connect((HOST, PORT))\n",
+    "    \n",
+    "    data = {\n",
+    "        'mode' : 'check',\n",
+    "        'last_updated' : 2\n",
+    "    }\n",
+    "    msg = json.dumps(data)\n",
+    "    msg = str.encode(msg)\n",
+    "    s.sendall(msg)\n",
+    "    data = s.recv(16184)\n",
+    "    print ('Data: {}\\n'.format(repr(data)))    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pull\n",
-    "This part tests \"mode\" = \"pull\" functionality.\n",
+    "This part tests `\"mode\" = \"pull\"` functionality.\n",
     "\n",
     "Query sent in a `pull` mode returns a bsm message that shall be broadcasted next.\n",
     "This query shall be used by Cohda and other broadcast devices. \n",
@@ -108,5 +142,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
